src/webapp/static/layout.css
html{
  background-color: rgb(30 30 40);
}
body{
  min-height:100vh;
  max-height: 100vh;
  position:relative;
}
.container-fluid{
  padding-left: 0px;
  padding-right: 0px;
}
.page{
  background-color: rgb(30 30 40);
  min-height:100vh;
  max-height:100vh;
  display: flex;
  flex-direction: column;
  justify-content: middle;
}
.main-view{
  position: relative;
  height: 100vh;
  color: lightgray;
  display: flex;
  justify-content: flex-end;
  overflow-x: hidden;
}
.contents{
  position: relative;
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 10vh;
  height: 100%;
  width: 100%;
  color: lightgray;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  overflow-y: auto;
}
p{
  text-align: center;
}
.text-area-form{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.checkbox-form, .topic-form, .coclust-form{
  display:flex;
  padding: 10%;
  flex-direction: column;
}
img{
  margin-bottom: 10vh;
  max-width: 75%;
  height: auto;
}
mark{
  font-style: normal;
  background-color: rgba(168, 136, 218, 0.5);
  border-radius: 5px;
  color: lightgray;
  text-shadow: 0px 0px 1px black;
}
.inner-document-display-area{
  text-align: justify;
  max-height: 200px;
  overflow-y: auto;
  padding: 10px;
  width: 100%;
  max-width: 900px;
  background-color: rgb(60 60 70);
  border-radius: 5px;
}
.outer-document-display-area{
  width: 100%;
  max-width: 900px;
  margin-bottom: 10vh;
}

